--- a/src/main/webapp/WEB-INF/top-nav.jspf
+++ b/src/main/webapp/WEB-INF/top-nav.jspf
@@ -1,13 +1,13 @@
 
 <%--        Log in, Signup, Signout, Profile--%>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top " style=" height: 1.2rem; z-index: 3;">
-    <div class="container-fluid ">
-        <div class="ms-auto d-flex align-items-center me-4 user-nav">
+<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top user-nav" style=" height: 1.3rem; z-index: 5;">
+    <div class="container-fluid user-nav">
+        <div class="ms-auto d-flex align-items-center me-4 text-light">
             <c:choose>
                 <c:when test="${empty sessionScope.activeUser}">
-                    <a href="${appURL}/login" class="nav-link me-4 hover-bold" style="color: var(--link-dark)">Login</a>
-                    <a href="${appURL}/signup" class="nav-link me-4" style="color: var(--link-dark)">Sign-up</a>
+                    <a href="${appURL}/login" class="nav-link me-4 hover-bold" style="color: black">Login</a>
+                    <a href="${appURL}/signup" class="nav-link me-4" style="color: black">Sign-up</a>
                 </c:when>
                 <c:otherwise>
                     <a href="${appURL}/signout" class="nav-link me-4" style="color: var(--link-dark)">Sign out</a>
@@ -20,8 +20,8 @@
 
 
 <%--    Start Nav Bar --%>
-<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow" style="z-index: 3;" >
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow top-nav custom-shadow pt-4" style="z-index: 3;" >
+    <div class="container-fluid ">
 
 <%--        Image--%>
     <a href="${appURL}">
