--- a/src/main/webapp/WEB-INF/trails-sidebar.jspf
+++ b/src/main/webapp/WEB-INF/trails-sidebar.jspf
@@ -8,21 +8,22 @@
         </div>
         <div class="offcanvas-body p-3">
             <form method="GET" action="${appURL}/view-trails">
+                <input type="hidden" name="page" value="${page}">
                 <!-- Category START -->
-                <div class="card card-body shadow p-4 mb-4">
+                <div class="card card-body custom-shadow p-4 mb-4">
                     <!-- Title -->
                     <h4 class="mb-2">Category</h4>
                     <c:forEach var="category" items="${trailCategories}">
                         <!-- Checkbox -->
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="filter-${category.id}" name="categories" value="${category.id}" <c:if test="${fn:contains(categories, category.id)}">checked</c:if>>
+                            <input class="form-check-input" type="checkbox" id="filter-${category.id}" name="categories" value="${category.id}" <c:if test="${cfn:contains(categoriesArr, category.id)}">checked</c:if>>
                             <label class="form-check-label" for="filter-${category.id}">${category.name}</label>
                         </div>
                     </c:forEach>
                 </div>
                 <!-- Category END -->
                 <!-- Difficulty Filter START -->
-                <div class="card card-body shadow p-4 mb-4">
+                <div class="card card-body custom-shadow p-4 mb-4">
                     <h4 class="mb-2">Difficulty</h4>
 
                     <!-- Easy -->
@@ -58,15 +59,15 @@
 
 
                 <!-- Limit START -->
-                <div class="card card-body shadow p-4">
+                <div class="card card-body custom-shadow p-4">
                     <!-- Title -->
                     <h4 class="mb-2">Show</h4>
                     <div class="btn-group" role="group" aria-label="Show radio toggle button group">
-                        <input type="radio" class="btn-check" id="show-10" autocomplete="off" name="limit" value="10" <c:if test="${limit eq 10}">checked</c:if>>
-                        <label class="btn btn-outline-success" for="show-10">10</label>
+                        <input type="radio" class="btn-check" id="show-6" autocomplete="off" name="limit" value="6" <c:if test="${limit eq 6}">checked</c:if>>
+                        <label class="btn btn-outline-success" for="show-6">6</label>
 
-                        <input type="radio" class="btn-check" id="show-20" autocomplete="off" name="limit" value="20" <c:if test="${limit eq 20}">checked</c:if>>
-                        <label class="btn btn-outline-success" for="show-20">20</label>
+                        <input type="radio" class="btn-check" id="show-12" autocomplete="off" name="limit" value="12" <c:if test="${limit eq 12}">checked</c:if>>
+                        <label class="btn btn-outline-success" for="show-12">12</label>
 
                         <input type="radio" class="btn-check" id="show-50" autocomplete="off" name="limit" value="50" <c:if test="${limit eq 50}">checked</c:if>>
                         <label class="btn btn-outline-success" for="show-50">All</label>
