--- a/src/main/webapp/styles/my-styles.css
+++ b/src/main/webapp/styles/my-styles.css
@@ -3,16 +3,22 @@
     --background-light: #ffffff;
     --background-gray: #939393;
     --background-dark: #004A32;
+    --background-accent: #eef5f2;
+    --background-accent-darker: #d2e0d2;
     --text-light: #ffffff;
     --text-dark: #383A4A;
     --button-dark: #004A32;
     --button-light: #ffffff;
     --link-dark: #004A32;
+    --link-light: #ffffff;
     --accent-1: #416955;
-    --accent-2: #a5b6ae;
+    --accent-2: rgba(65, 105, 85, 0.27);
     --accent-3: #edf2ed;
     --accent-4: #d9e5d9;
+    --custom-shadow: rgba(0, 44, 24, 0.1);
 }
+
+/*--background-accent: #f6f8f6;*/
 
 body {
     margin: 0;
@@ -241,4 +247,57 @@ select {
 
 .delete-button:hover {
     background-color: rgba(255, 0, 0, 0.6);
+}
+
+/*Pagination*/
+
+.pagination .page-item .page-link {
+    color: var(--background-dark) !important;
+
+}
+
+.pagination .page-item.active .page-link {
+    background-color: var(--background-dark) !important;
+    color: var(--text-light) !important;
+    border: 1px solid var(--background-dark) !important;
+}
+
+.pagination .page-link:hover {
+    color: var(--accent-1) !important;
+}
+
+.pagination .page-item.active .page-link:hover {
+    background-color: var(--accent-1) !important;
+}
+
+.pagination .page-item:not(.active) .page-link:focus,
+.pagination .page-item:not(.active) .page-link:active {
+    box-shadow: 0 0 5px var(--accent-1) !important;
+}
+
+/*Show Limit Sidebar Radio Buttons*/
+
+.btn-outline-success {
+    color: var(--background-dark) !important;
+    border-color: var(--background-dark) !important;
+}
+
+.btn-outline-success:hover,
+.btn-outline-success:active,
+.btn-outline-success:focus {
+    background-color: var(--background-dark) !important;
+    color: white !important;
+}
+
+.btn-check:checked + .btn-outline-success {
+    background-color: var(--background-dark) !important;
+    color: white !important;
+}
+
+.custom-shadow {
+    box-shadow: 2px 2px 5px var(--custom-shadow) !important;
+}
+
+.card-color {
+    background-color: var(--background-accent);
 }
