--- a/src/main/webapp/styles/404.css
+++ b/src/main/webapp/styles/404.css
@@ -5,12 +5,13 @@
     justify-content: center;
     align-items: flex-end;
     width: 100%;
-    min-height: 60vh;
+    min-height: 70vh;
     position: relative;
     text-align: right;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.2);
     padding-right: 5%;
+    margin-bottom: -3rem;
 }
 
 .hero img {
@@ -21,6 +22,7 @@
     height: 100%;
     object-fit: cover;
     position: absolute;
+    min-height: 90vh;
     top: 0;
     left: 0;
     z-index: -1;
