Individual Trail View

--- a/src/main/webapp/styles/my-styles.css
+++ b/src/main/webapp/styles/my-styles.css
@@ -301,3 +301,21 @@ select {
 .card-color {
     background-color: var(--background-accent);
 }
+
+.hover-grow {
+    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+}
+
+.hover-grow:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2) !important;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style-type: none;
+}
