--- a/src/main/webapp/WEB-INF/top.jspf
+++ b/src/main/webapp/WEB-INF/top.jspf
@@ -67,7 +67,8 @@
                     pageTitle eq 'Add Maintenance Request' or pageTitle eq 'Add Trail' or
                     pageTitle eq 'Delete Trail' or pageTitle eq 'Complete Maintenance Request' or
                     pageTitle eq 'Edit Trail' or pageTitle eq 'New password' or
-                    pageTitle eq 'Edit User' or pageTitle eq 'Delete Review'}">
+                    pageTitle eq 'Edit User' or pageTitle eq 'Delete Review'
+                    or pageTitle eq 'Add Review'}">
 <style>
     body {
         background: url('${appURL}/images/404_forest.jpg') no-repeat center center fixed;
