--- a/src/main/webapp/WEB-INF/top-nav.jspf
+++ b/src/main/webapp/WEB-INF/top-nav.jspf
@@ -36,20 +36,24 @@
 <%--        Main Menu--%>
         <div class="collapse navbar-collapse" id="navbarSupportedContent" style="float:right">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0" style="margin-right: 3rem">
-                <li class="nav-item me-4 my-nav-item" style="font-size: 1rem; font-weight:bold; color: var(--background-gray)">
-                    <a class="nav-link active" aria-current="page" href="${appURL}/">Home</a>
-                </li>
-                <li class="nav-item me-4 my-nav-item" style="font-size: 1rem">
-                    <a class="nav-link" href="${appURL}/view-trails">Trails</a>
-                </li>
-                <li class="nav-item me-4 my-nav-item" style="font-size: 1rem">
-                    <a class="nav-link" href="${appURL}/about">About</a>
-                </li>
-                <li class="nav-item me-4 my-nav-item" style="font-size: 1rem">
-                    <a class="nav-link" href="${appURL}/contact">Contact</a>
+                <li class="nav-item me-4 my-nav-item" style="font-size: 1rem; font-weight:bold;">
+                    <a class="nav-link ${pageTitle eq 'Home' ? 'active text-accent' : ''}" href="${appURL}/">Home</a>
                 </li>
 
-<%--                Admin Dropdown--%>
+                <li class="nav-item me-4 my-nav-item" style="font-size: 1rem;">
+                    <a class="nav-link ${pageTitle eq 'All Trails' ? 'active text-accent' : ''}" href="${appURL}/view-trails">Trails</a>
+                </li>
+
+                <li class="nav-item me-4 my-nav-item" style="font-size: 1rem;">
+                    <a class="nav-link ${pageTitle eq 'About' ? 'active text-accent' : ''}" href="${appURL}/about">About</a>
+                </li>
+
+                <li class="nav-item me-4 my-nav-item" style="font-size: 1rem;">
+                    <a class="nav-link ${pageTitle eq 'Contact' ? 'active text-accent' : ''}" href="${appURL}/contact">Contact</a>
+                </li>
+
+
+            <%--                Admin Dropdown--%>
                 <c:if test="${not empty sessionScope.activeUser && sessionScope.activeUser.status == 'active' && sessionScope.activeUser.privileges == 'admin'}">
                 <li class="nav-item dropdown">
                     <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" style="font-weight: bold; color:#000000A6;  padding: 8px 8px;">
