--- a/src/main/webapp/WEB-INF/top-nav.jspf
+++ b/src/main/webapp/WEB-INF/top-nav.jspf
@@ -45,11 +45,7 @@
                 </li>
 
                 <li class="nav-item me-4 my-nav-item" style="font-size: 1rem;">
-                    <a class="nav-link ${pageTitle eq 'About' ? 'active text-accent' : ''}" href="${appURL}/about">About</a>
-                </li>
-
-                <li class="nav-item me-4 my-nav-item" style="font-size: 1rem;">
-                    <a class="nav-link ${pageTitle eq 'Contact' ? 'active text-accent' : ''}" href="${appURL}/contact">Contact</a>
+                    <a class="nav-link ${pageTitle eq 'Contact' ? 'active text-accent' : ''}" href="${pageContext.request.contextPath}/contact">Contact</a>
                 </li>
 
 
