--- a/src/main/webapp/WEB-INF/top.jspf
+++ b/src/main/webapp/WEB-INF/top.jspf
@@ -3,7 +3,8 @@
 <%@ taglib prefix="fmt" uri="jakarta.tags.fmt" %>
 <%@ taglib prefix="fn" uri="jakarta.tags.functions" %>
 <%@ taglib prefix="cfn" uri="/WEB-INF/tld/custom-functions.tld" %>
-<%@ taglib prefix="s" uri="http://java.sun.com/jsp/jstl/core" %>
+<%--<%@ taglib prefix="s" uri="http://java.sun.com/jsp/jstl/core" %>--%>
+
 
 <jsp:useBean id="date" class="java.util.Date" />
 <fmt:setLocale value="en-US" />
