--- a/src/main/webapp/WEB-INF/top.jspf
+++ b/src/main/webapp/WEB-INF/top.jspf
@@ -35,6 +35,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+<%--Favicon--%>
+    <link rel="icon" type="image/x-icon" href="${appURL}/images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="${appURL}/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="${appURL}/images/favicon-16x16.png">
+    <link rel="manifest" href="${appURL}/images/site.webmanifest">
+
 <%--    CSS --%>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="${appURL}/styles/top-nav.css">
