--- a/src/main/webapp/styles/my-styles.css
+++ b/src/main/webapp/styles/my-styles.css
@@ -26,6 +26,13 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Raleway", sans-serif;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
 }
 h1 {
     color: var(--text-light);
