--- a/src/main/webapp/WEB-INF/top.jspf
+++ b/src/main/webapp/WEB-INF/top.jspf
@@ -80,7 +80,8 @@
                     pageTitle eq 'Edit Trail' or pageTitle eq 'New password' or
                     pageTitle eq 'Edit User' or pageTitle eq 'Delete Review'
                     or pageTitle eq 'Add Review' or pageTitle eq 'Privacy Policy' or pageTitle eq 'Terms and Conditions'
-                    or pageTitle eq 'Terms and Conditions' or pageTitle eq 'Contact'}">
+                    or pageTitle eq 'Terms and Conditions' or pageTitle eq 'Contact'
+                    or pageTitle eq 'Donate'}">
 <style>
     body {
         background: url('${appURL}/images/404_forest.jpg') no-repeat center center fixed;
