--- a/src/main/webapp/WEB-INF/top-nav.jspf
+++ b/src/main/webapp/WEB-INF/top-nav.jspf
@@ -71,6 +71,10 @@
                     <a class="nav-link ${pageTitle eq 'All Trails' ? 'active text-accent' : ''}" href="${appURL}/view-trails">Trails</a>
                 </li>
 
+                <li class="nav-item me-4 my-nav-item" style="font-size: 1rem;">
+                    <a class="nav-link ${pageTitle eq 'Map of Emerald Park' ? 'active text-accent' : ''}" href="${appURL}/map">Map</a>
+                </li>
+
                 <c:choose>
                     <c:when test="${empty sessionScope.activeUser}">
                     </c:when>
